2002-05-21  Max Horn  <max@quendi.de>

	* autogen.sh: use --copy for automake
	* conf/Configuration.cc: uss std::snprintf will break if we use our emulation
	of snprintf, and on systems where is available but not in namespace std.
	* usecode/compiler/ucmain.cc: getopt() comes from unistd.h not getopt.h
	(at least in POSIX, and on Mac OS X)

2002-05-20  Jeff Freedman  <jeff@amy.nerble.net>

	* Added Nadir to Island Patch, and checked in patch files to CVS.

2002-05-19  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/combo.cc (Combo): Added a "Save combos" option.  Also
	fixed a crash in Combo::read().

	* usecode/compiler/ucparse.yy,etc:  Added 'converse2' syntax for
	easier conversations.
	* content/islefaq/usecode.uc:  Converted some of the conversations
	to the new syntax, and added a bit more plot after Amy has joined.

2002-05-19  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/*.html : updated
	* docs/exult_studio.txt : updated
	* docs/xml/*.xml : updated
	* readme, faq : updated

2002-05-17  Tristan Tarrant  <nadir@users.sf.net>
	* schedule.cc: #include "SDL_timer.h" to appease gcc

2002-05-16  Ryan Nunn  <triforce@merlin.net.au>
	* files/listfiles.cc, files/utils.cc : Fixing up Win32 U7ListFiles().

2002-05-16  Simon Quinn <email@simonquinn.co.uk>
	* gamewin.cc: fix nighttime SFX

2002-05-15  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/contain.cc (Container_game_object): Auto-add keys to SI
	keyring.  Also ignore frame when combining some items (coins,
	arrows, etc.)

2002-05-14  Ryan Nunn  <triforce@merlin.net.au>
	* cheat.*, gamerend.cc, objs/objs.h : Fixing Namespace, and forcing int
	  to bool problems.
	* gumps/Face_stats.cc : Fixed old problem with stat bars not being
	  clamped if a stat was larger than the max.

2002-05-13  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: In rewriting with the 'combine' flag, I also changed
	all uses of drop() with add(), since drop() can potentially delete
	the object being added.
